--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 canvas {
     background-color: #f0f0f0;
     padding: 20px;
+    border: 5px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 #modalOverlay {
@@ -28,4 +31,19 @@ canvas {
 
 #customAlert.hidden, #modalOverlay.hidden {
     display: none;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+    
+h1 {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
