--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+p, h1, h2, h3, h4, h5, h6, li, span, div, a, button, label, input, textarea, select, option {
+    font-family: 'Red Hat Display', 'Special Gothic Expanded One', 'Roboto', sans-serif !important;
+    color: #333;
+}
+
+button {
+    font-family: 'Red Hat Display', 'Special Gothic Expanded One', 'Roboto', sans-serif !important;
+}
+
 canvas {
     background-color: #f0f0f0;
     padding: 20px;
@@ -5,6 +14,25 @@ canvas {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin-top: 10px;
+}
+
+.submenu {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+}
+
+.submenu h2 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #1e90ff; /* DodgerBlue */
+    text-decoration: underline;
+}
+
+.submenu h2:hover {
+    color: #ff6347; /* Tomato */
+    cursor: pointer;
 }
 
 #modalOverlay {
@@ -38,7 +66,7 @@ canvas {
     display: flex;
     flex-direction: row;
     gap: 10px;
-    align-items: center;
+    justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -61,7 +89,6 @@ canvas {
 }
 
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -72,7 +99,7 @@ body {
 h1 {
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .instructions {
